# advent-of-code-2021

./: common.js
1/: a.js  advent01a.js  advent01b.js  b.js  input.json
10/: a.py  b.py
11/: ab.py
12/: a.py  b.py  node.py
13/: ab.py
14/: ab.py
15/: a.py  b.py  ola-input.txt  pyproject.toml
16/: a.py
17/: a.py  b.py
2/: a.js  advent02a.js  advent02b.js  b.js
22/: a.py  instruction.py  space.py
3/: a.js  b.js
4/: a.py  b.py  board.py  util.py
5/: a.py  b.py  board.py  line.py  util.py
6/: ab.py
7/: ab.py
8/: a.py  b.py
9/: ab.py
