[tool.poetry]
name = "15"
version = "0.1.0"
description = ""
authors = ["Ola Flisbäck <ola.flisback@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
